--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/remark-dialog/remark-dialog.component.html
@@ -42,7 +42,7 @@
 
 
 <form [formGroup]="remarkForm" class="kt-form kt-form--group-seperator-dashed h-screen">
-  <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Edit Page</div>
+  <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Enter Remarks</div>
 
   <div class="kt-form">
     <div class="kt-portlet__body">
