--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -74,6 +74,8 @@
             </mat-form-field>
         </div>
       </div>
+
+          <input matInput hidden formControlName="CircleCode" />
       <div class="col-lg-3 col-sm-12">
         <div>
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -199,6 +201,7 @@
         </div>
           <div>
             <div class="row">
+
               <div class="col-lg-3 col-sm-12">
                 <div>
                   <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
@@ -207,12 +210,14 @@
                   </mat-form-field>
                 </div>
               </div>
+
               <div class="col-lg-3 col-sm-12">
             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Agri Business Potential</mat-label>
               <input matInput maxlength="200" placeholder="Enter Agri Business Potential" formControlName="AgriBusinessPotential" autocomplete="off" />
             </mat-form-field>
           </div>
+          
           <div>
           </div>
 
@@ -231,7 +236,7 @@
         <table class="table table-striped" *ngIf="tableLength">
           <thead>
             <tr class="table-header-background text-center">
-              <th>Circle Id</th>
+              <th>Circle Code</th>
               <th>Village Name</th>
               <th>No Of Formaer</th>
               <th>Farm Size</th>
@@ -245,7 +250,7 @@
           </thead>
           <tbody>
             <tr class="text-center" *ngFor="let array of village; let i = index">
-              <td style="width: 100px; text-align:center;">{{array?.CircleId}}</td>
+              <td style="width: 100px; text-align:center;">{{array?.CircleCode}}</td>
               <td>{{array?.VillageName}}</td>
               <td>{{array?.NoOfFarmer}}</td>
               <td>{{array?.FarmSize}}</td>
