--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -1,1 +1,39 @@
-<p>reports works!</p>
+<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+
+
+    <div class="row py-3">
+      <div class="col-lg-12 col-sm-12">
+          <div class="heading">Reports</div>
+      </div>
+  </div>
+  
+      <div class="col-lg-12 row mt-2 justify-content-center text-center border-t py-4" >
+         
+        <div class="col-lg-4 col-sm-12">
+              <mat-card (click) = "searchLoanCase()">Search Loan Cases by CNIC</mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click) = "bufrictionOfOSBalances()">Bifurcation of OS balances LC</mat-card>
+        </div>
+        
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click) = "updatedListOfDefaulters()">Updated List of defaulters of a circle for each MCO</mat-card>
+        </div>
+
+      </div>
+
+      <div class="col-lg-12 mt-2 row justify-content-center text-center border-t py-4" >
+         
+        <div class="col-lg-4 col-sm-12">
+              <mat-card (click) = "faViewCircleWise()">FAs will see Circle-Wise/Party Wise Early Warning reports on NPLs and Charge-off loans for recovery persuasion.</mat-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card (click) = "earlyWarningReports()">Early warning reports for MCOs</mat-card>
+        </div>
+
+      </div>
+  
+  </div>
+  
