--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -5,7 +5,7 @@
         <!--[ngClass]="{ 'kt-portlet--body-progress' : viewLoading, 'kt-portlet--body-progress-overlay' : loadingAfterSubmit }"-->
         <div style="display: flex;flex-direction: row;justify-content: space-between">
 
-            <h3 class="kt-portlet__head-title">Add Vendor's Location</h3>
+            <h3 class="kt-portlet__head-title">Location</h3>
 
 
             <button mat-icon-button color="accent" (click)="close(0)">
