--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -24,7 +24,7 @@
                             <div class="col-lg-4 kt-margin-bottom-20-mobile">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <input matInput placeholder="Enter cnic" formControlName="Cnic" maxlength="15"
-                                           autocomplete="off" [mask]="maskEnums.cnic" [readonly]="checkEligibiltyCnic"/>
+                                           autocomplete="off" [mask]="maskEnums.cnic" />
                                     <mat-error *ngIf="hasError('Cnic', 'required')">cnic <strong>required</strong>
                                     </mat-error>
                                     <mat-error *ngIf="hasError('Cnic', 'pattern')"><strong>Cnic lenght invalid</strong>
