--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -1,7 +1,7 @@
 <div class=" px-10 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
     <div class="row py-3">
       <div class="col-lg-12 col-sm-12">
-          <div class="heading">Add Update Bench Marking</div>
+          <div class="heading">Add Update Benchmarking</div>
       </div>
 
   </div>
@@ -217,7 +217,7 @@
               <input matInput maxlength="200" placeholder="Enter Agri Business Potential" formControlName="AgriBusinessPotential" autocomplete="off" />
             </mat-form-field>
           </div>
-          
+
           <div>
           </div>
 
