--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -4,7 +4,7 @@
 
     <div class="row py-3">
       <div class="col-lg-9 col-sm-12">
-          <div class="heading">Get Village Bench Marking</div>
+          <div class="heading">Get Village Benchmarking</div>
       </div>
       <div class="col-lg-3 col-sm-12 self-center">
           <p class="text-right">
