--- a/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
+++ b/src/app/modules/geo-fencing/view-get-fancing-modal/view-get-fancing-modal.component.html
@@ -26,18 +26,33 @@
                        #search>
 
 
-                <agm-map [latitude]="lat" [longitude]="lng"
+                <!--                <agm-map [latitude]="lat" [longitude]="lng"-->
+                <!--                         [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true"-->
+                <!--                         style="height: 500px">-->
+                <!--                    <agm-marker *ngFor="let coordinate of start_end_mark; let i=index"-->
+                <!--                                [latitude]="coordinate[0]"-->
+                <!--                                [longitude]="coordinate[1]" [agmFitBounds]="true"></agm-marker>-->
+                <!--                    <agm-polyline [visible]="true" [strokeWeight]="3" [strokeColor]="'#07b57a'">-->
+                <!--                        <agm-polyline-point-->
+                <!--                            *ngFor="let coordinate of latlng; let i=index"-->
+                <!--                            [latitude]="coordinate[0]"-->
+                <!--                            [longitude]="coordinate[1]">-->
+
+                <!--                        </agm-polyline-point>-->
+                <!--                    </agm-polyline>-->
+                <!--                </agm-map>-->
+<!--                {{start_end_mark|json}}-->
+                               <agm-map [latitude]="lat" [longitude]="lng"
                          [fullscreenControl]='true' [mapTypeControl]='true' [fitBounds]="true"
                          style="height: 500px">
                     <agm-marker *ngFor="let coordinate of start_end_mark; let i=index"
-                                [latitude]="coordinate[0]"
-                                [longitude]="coordinate[1]" [agmFitBounds]="true"></agm-marker>
+                                [latitude]="isNumber(coordinate.Latitude)"
+                                [longitude]="isNumber(coordinate.Longitude)" [agmFitBounds]="true"></agm-marker>
                     <agm-polyline [visible]="true" [strokeWeight]="3" [strokeColor]="'#07b57a'">
                         <agm-polyline-point
-                            *ngFor="let coordinate of latlng; let i=index"
-                            [latitude]="coordinate[0]"
-                            [longitude]="coordinate[1]">
-
+                            *ngFor="let coordinate of latlong; let i=index"
+                            [latitude]="isNumber(coordinate.Latitude)"
+                            [longitude]="isNumber(coordinate.Longitude)">
                         </agm-polyline-point>
                     </agm-polyline>
                 </agm-map>
