--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
  $MaterialIcons_FontPath: "~material-icons-font/fonts";
  @import '~material-icons-font/sass/main';
  @import '~material-icons-font/sass/Regular';
+ @import "~bootstrap/scss/bootstrap";
 .trend-dialog{
   overflow-y: hidden;
   .mat-dialog-container{
