--- a/src/app/layout/layouts/vertical/classic/classic.component.html
+++ b/src/app/layout/layouts/vertical/classic/classic.component.html
@@ -28,7 +28,7 @@
 
     <!-- Header -->
     <div
-        class="relative flex flex-0 items-center w-full h-10 px-4 md:px-6 z-49 shadow dark:shadow-none dark:border-b bg-card dark:bg-transparent print:hidden">
+        class="relative flex flex-0 items-center w-full h-10 px-4 md:px-6 z-49 shadow-sm  dark:shadow-none dark:border-b bg-card dark:bg-transparent print:hidden">
         <!-- Navigation toggle button -->
         <button
             mat-icon-button
@@ -38,7 +38,7 @@
         <!-- Components -->
         <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
             <!--            <languages></languages>-->
-            <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
+            <!-- <fuse-fullscreen class="hidden md:block"></fuse-fullscreen> -->
             <!--            <search [appearance]="'bar'"></search>-->
             <!--            <shortcuts></shortcuts>-->
             <!--            <messages></messages>-->
