--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -33,13 +33,13 @@
         <div class="form-group row">
             <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile"
                  id="custom-table-activity-list">
-                <div class="custom-accordion rounded-lg my-2 shadow border" *ngFor="let parent_configuration of configurations;let i=index">
+                <div class="custom-accordion rounded-lg my-2 shadow-sm border" *ngFor="let parent_configuration of configurations;let i=index">
                     <div v class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
                          style="cursor: pointer">
                         <div class="ml-8" style="align-self: center;">
-                            <h3 class="font-bold">
+                            <span class="font-bold">
                                 {{parent_configuration.KeyName}}
-                            </h3>
+                            </span>
                         </div>
                         <div class="mr-8" style="display: flex;
     margin-right: 10%;">
