--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -169,14 +169,14 @@
             <div class="custom-accordion " *ngFor="let activity of TourPlans | paginate: {itemsPerPage: itemsPerPage, currentPage: pageIndex, totalItems: totalItems} ; let i = index;">
                 <div class="custom-accordion-head" (click)="toggleAccordion(i)"
                      style="cursor: pointer">
-                    <div class="custom-padding">
-                        <h3 class="font-bold p-3">
+                    <div class=" self-center">
+                        <span class="font-bold px-3 py-1">
                             {{activity.VisitedDate}}
-                        </h3>
+                        </span>
                     </div>
 
 
-                    <div class="custom-padding">
+                    <div class="mr-5">
                         <!--                <button mat-icon-button color="warn"-->
                         <!--                        (click)="deleteActivity(activity)">-->
                         <!--                  <mat-icon>-->
