--- a/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
+++ b/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
@@ -149,7 +149,7 @@
 
 
                 </div>
-                <h3>Area Convertor</h3>
+                <span class="font-bold">Area Convertor</span>
 
                 <div class="form-group kt-form__group row">
 
