--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -91,7 +91,7 @@
 
         <div class="form-group kt-form__group row" *ngIf="dataFetched && CustomerORR.length>0">
           <div class="col-lg-12">
-            <h3>Customers</h3>
+            <span>Customers</span>
             <div class="table-responsive">
               <table class="table table-striped">
                 <thead>
