--- a/src/app/modules/auth/otp/otp.component.html
+++ b/src/app/modules/auth/otp/otp.component.html
@@ -15,7 +15,7 @@
 			<div class="col-lg-12">
 				<div class="kt-login__title">
 					<!--<h3>{{ 'AUTH.FORGOT.TITLE' | translate }}</h3>-->
-					<h3>Enter OTP</h3>
+					<span class="font-bold">Enter OTP</span>
 				</div>
 			</div>
 		</div>
