--- a/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
+++ b/src/app/modules/report-managment/apilogs-list/apilogs-list.component.html
@@ -126,7 +126,7 @@
                              (click)="fetch3rdAPI($event,item)"
                              style="box-shadow: none !important; margin-bottom: 5px !important; font-size: 12px;">
             <mat-expansion-panel-header style="font-size: 12px;"
-                                        class="mat-row custom-accordion py-2 h-10  rounded-lg my-1 shadow border">
+                                        class="mat-row custom-accordion py-2 h-10  rounded-lg my-1 shadow-sm border">
                 <span class="mat-cell py-6 self-center font-bold"
                       style="width: 10px; font-size: 12px;">{{item?.Id}}</span>
                 <span class="mat-cell py-6 self-center font-bold"
