--- a/src/app/layout/common/languages/languages.component.html
+++ b/src/app/layout/common/languages/languages.component.html
@@ -25,7 +25,7 @@
 <ng-template
     let-lang
     #flagImage>
-    <span class="relative w-6 shadow rounded-sm overflow-hidden">
+    <span class="relative w-6 shadow-sm rounded-sm overflow-hidden">
         <span class="absolute inset-0 ring-1 ring-inset ring-black ring-opacity-10"></span>
         <img
             class="w-full"
